# ndt_feature_graph

./: .gitignore  README.md  README.txt  dijkstra_shortest_paths.hpp
flirtlib/trunk/: CMakeLists.txt  INSTALL  README
flirtlib/trunk/doc/: Doxyfile.in
flirtlib/trunk/src/: CMakeLists.txt  mainpage.h
flirtlib/trunk/src/applications/: CMakeLists.txt  FLIRTDemo.cpp  FLIRTDemo.h  RansacLoopClosureDrawMovie.cpp  RansacLoopClosureTest.cpp
flirtlib/trunk/src/build_tools/: FindQwt.cmake  FindQwt5.cmake
flirtlib/trunk/src/feature/: AbstractFeatureSetMatcher.cpp  AbstractFeatureSetMatcher.h  BetaGrid.cpp  BetaGrid.h  CMakeLists.txt  CurvatureDetector.cpp  CurvatureDetector.h  Descriptor.h  Detector.h  InterestPoint.cpp  InterestPoint.h  MultiScaleDetector.cpp  MultiScaleDetector.h  NormalBlobDetector.cpp  NormalBlobDetector.h  NormalDetector.cpp  NormalDetector.h  NormalEdgeDetector.cpp  NormalEdgeDetector.h  RangeDetector.cpp  RangeDetector.h  RansacFeatureSetMatcher.cpp  RansacFeatureSetMatcher.h  RansacMultiFeatureSetMatcher.cpp  RansacMultiFeatureSetMatcher.h  ShapeContext.cpp  ShapeContext.h
flirtlib/trunk/src/geometry/: CMakeLists.txt  point.cpp  point.h
flirtlib/trunk/src/gui/: AbstractRenderer.h  (+50 more)
ndt_feature/: CMakeLists.txt  README.md  package.xml
ndt_feature/bettergraph_conversion/: CMakeLists.txt
ndt_feature/bettergraph_conversion/Test/: CMakeLists.txt  airport_g2o.cpp  ndt_graph3dg2o.cpp
ndt_feature/bettergraph_conversion/include/: Graph2G2o.hpp  Graph2G2o3d.hpp  NDTRegistrationGraph.hpp
ndt_feature/bettergraph_conversion/src/: CMakeLists.txt  airport_g2o.cpp  ndt_feature_g20.cpp
ndt_feature/bettergraph_conversion/test/: CMakeLists.txt  test_conversion.cpp
ndt_feature/data/FULL GRAPH/: README  mapping  mapping0.T  mapping0local_fuse.T  mapping0local_odom.T  mapping1.T  mapping1local_fuse.T  mapping1local_odom.T  mapping2.T  mapping2local_fuse.T  mapping2local_odom.T  mapping3.T  mapping3local_fuse.T  mapping3local_odom.T  mapping4.T  mapping4.feat  mapping4local_fuse.T  mapping4local_odom.T  mapping5.T  mapping5local_fuse.T  mapping5local_odom.T  mapping6.T  mapping6local_fuse.T  mapping6local_odom.T  mapping7.T  mapping7local_odom.T
ndt_feature/include/ndt_feature/: conversions.h  flirtlib_utils.h  graph_visualizer.hpp  interfaces.h  motion_model.hpp  ndt_feature_frame.h  ndt_feature_fuser_hmt.h  ndt_feature_graph.h  ndt_feature_graph_logger.hpp  ndt_feature_link.h  ndt_feature_map.h  ndt_feature_node.h  ndt_feature_proc.h  ndt_feature_rviz.h  ndt_matcher_d2d_fusion.h  ndt_matcher_d2d_fusion_linesearch.h  ndt_offline_mapper.h  ndt_rviz.h  ndtgraph_conversion.h  ros_utils.h  serialization.h  serialization.hpp  utils.h
ndt_feature/launch/: asif.launch  automower_laser2d_calib.launch  coop_laser2d_calib.launch  cth_laser2d_calib.launch  feature_viewer.launch  fuser_laser2d.rviz  gustav_laser_tf.launch  gustav_radar_tf.launch  gustav_review_tf.launch  gustav_tf.launch  henrik_replay_mapperbag_fuser.launch  ndt_feature_vis.rviz  radar.launch  replay.launch  replay_arla.launch  replay_arla_fuser.launch  replay_arla_fuser_offline.launch  replay_arla_visualize.launch  replay_automower_fuser.launch  replay_cth1_fuser.launch  replay_office1_fuser.launch  replay_survey.launch  replay_survey2_fuser.launch  replay_survey_fuser.launch  replay_without_clock.launch  smoke.launch  survey2_laser2d_calib.launch  tf_simple.launch
ndt_feature/malcolm_addons/: CMakeLists.txt  README.md
ndt_feature/malcolm_addons/GRAPHS/: association_nongraph.txt  everything.g2o  landmarks.g2o  landmarks_perfect_graph.g2o  scaled_prior.g2o  test_position_landmark_compare_to_what_frame.g2o
ndt_feature/malcolm_addons/Test/: .kdev_include_paths  CMakeLists.txt  manual_graph.cpp  ndt_duplicate_graph.cpp  ndt_feature_g20.cpp  ndt_g2olandmark.cpp  simulator.h  test_auto_complete.cpp  test_conversion.cpp  test_copy_graph.cpp  test_cov.cpp  test_covariance_graph_g2o.cpp  test_g2o.cpp  test_prior_g2o.cpp  test_read_g2p.cpp  test_same_graph_bigger.cpp
ndt_feature/malcolm_addons/include/: ACG.hpp  G2OGraphMaker.hpp  G2OGraphMakerNormal.hpp  Graph2G2o.hpp  Graph2G2o3d.hpp  HardCodedG2O.hpp  HardCodedG2O_old.hpp  NDTRegistrationGraph.hpp  PriorAutoComplete.hpp  conversion.hpp  covariance.hpp  ndt_corner_graph.hpp  ndt_corner_node.hpp  vertex_se2_prior.hpp
ndt_feature/malcolm_addons/launch/: gustav_tf.launch  henrik_replay_mapperbag_fuser.launch  radar.launch  review.launch  rviz.launch
ndt_feature/malcolm_addons/src/: ACG.cpp  all_real.cpp  ndt_g2omaker.cpp
ndt_feature/msg/: NDTEdgeMsg.msg  NDTFeatureFuserHMTMsg.msg  NDTGraphMsg.msg  NDTNodeMsg.msg
ndt_feature/src/: correspondence_grouping.cpp  laser2d_extrinsic_calibration.cpp  ndt_feature2d_fuser.cpp  ndt_feature2d_reg_node.cpp  ndt_feature2d_view.cpp  ndt_feature_debug.cpp  ndt_feature_fuser.cpp  ndt_feature_graph_opt.cpp  ndt_feature_map_test.cpp  ndt_feature_mcl_node.cpp  ndt_feature_node_test.cpp  ndt_feature_pcl_eval.cpp  ndt_fusion_test.cpp  ndt_memcheck_test.cpp  ndt_odom_debug.cpp  odom_hessian_test.cpp  publish_graph_message.cpp  shot_test.cpp  tf_odom.cpp  utils_affine_test.cpp
ndt_feature/src/ndt_feature_src/: CMakeLists.txt  motion_model.cpp  ndt_feature_fuser_hmt.cpp  ndt_feature_graph.cpp
ndt_offline_ndt_feature/: CMakeLists.txt  README.md  ndt_offline.kdev4  ndt_offline_ndt_feature.kdev4  package.xml
ndt_offline_ndt_feature/.kdev4/: ndt_offline.kdev4  ndt_offline_ndt_feature.kdev4
ndt_offline_ndt_feature/include/ndt_offline/: BagReaderInterface.hpp  LaserBagReader.hpp  PoseInterpolationNavMsgsOdo.h  VelodyneBagReader.h  tfMessageReader.h
ndt_offline_ndt_feature/src/: README.md  fuser3d_offline.cpp  ndt_graph_logger_offline.cpp  ndt_graph_offline.cpp  ndt_offline_laser.cpp
ndt_rviz_visualisation_ndt_feature/: CHANGELOG.rst  CMakeLists.txt  ndt_rviz_visualisation.kdev4  ndt_rviz_visualisation_ndt_feature.kdev4  package.xml  plugin_description.xml  plugin_description.xml~
ndt_rviz_visualisation_ndt_feature/src/: ndt_graph_display.cpp  ndt_graph_display.hpp  ndt_vector_display.cpp  ndt_vector_display.hpp
(+78 files in other folders)
